<resources>
    <string name="app_name">Lender</string>
    <string name="action_settings">Settings</string>


    <string name="month">(Months)</string>
    <string name="amount">Amount*</string>
    <string name="anual_rate">Rate*</string>
    <string name="term">Term*</string>
    <string name="calculate">Calculate</string>
    <string name="generate">generate</string>
    <string name="loan_info">Loan Info</string>
    <string name="cancel">Cancel</string>
    <string name="rate_sign">%</string>
    <string name="monthly">Monthly</string>
    <string name="anual">Anual</string>
    <string name="n">N</string>
    <string name="cuote">Cuote</string>
    <string name="interest">interest</string>
    <string name="amortization">Amortization</string>
    <string name="balance">Balance</string>

</resources>
