<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/diaglog"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="beanstage.com.lender.LoanActivityFragment">

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:text="@string/amount"
            tools:text="@string/amount" />

        <TextView
            android:id="@+id/rateTipTextView"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/rateEditText"
            android:layout_below="@+id/amountEditText"
            android:text="@string/rate_sign"
            tools:text="@string/rate_sign" android:layout_toEndOf="@+id/rateEditText" />

        <ToggleButton
            android:id="@+id/isAnualToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="10sp"
            android:layout_below="@+id/amountEditText"
            android:textOff="@string/monthly"
            android:textOn="@string/anual"
            android:layout_toRightOf="@+id/rateTipTextView" />

        <TextView
            android:id="@+id/rateTextView"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_below="@id/amountTextView"
            android:text="@string/anual_rate"
            tools:text="@string/anual_rate" />

        <TextView
            android:id="@+id/monthTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/amountEditText"
            android:layout_below="@+id/rateEditText"
            android:text="@string/month" android:layout_toEndOf="@id/amountEditText" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/amountTextView"
            android:maxLength="7"
            android:ems="10"
            android:inputType="numberSigned"
            android:labelFor="@+id/amountEditText" android:layout_toEndOf="@+id/amountTextView" />

        <EditText
            android:id="@+id/rateEditText"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_below="@id/amountEditText"
            android:layout_toRightOf="@id/rateTextView"
            android:maxLength="5"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@+id/rateEditText"
            android:layout_toEndOf="@id/rateTextView" />

        <EditText
            android:id="@+id/termEditText"
            android:labelFor="@+id/termEditText"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/termTextView"
            android:layout_below="@id/rateEditText"
            android:maxLength="3"
            android:ems="10"
            android:inputType="number" android:layout_toEndOf="@id/termTextView" />

        <TextView
            android:id="@+id/termTextView"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_below="@id/rateTextView"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/term"
            tools:text="@string/term" android:paddingStart="10dp" />
</RelativeLayout>